@startuml Builder Pattern — Yacht Configuration

skinparam classAttributeIconSize 0

enum HullMaterial {
    FIBERGLASS
    ALUMINUM
    STEEL
    CARBON_FIBER
    WOOD
}

enum EngineType {
    DIESEL
    ELECTRIC
    HYBRID
    SAIL
}

class Yacht <<Product>> {
    - name: String
    - lengthMeters: double
    - beamMeters: double
    - hullMaterial: HullMaterial
    - engineType: EngineType
    - engineHorsepower: int
    - cabinCount: int
    - crewCount: int
    - maxPassengers: int
    - cruisingSpeedKnots: int
    - hasSunDeck: boolean
    - hasJacuzzi: boolean
    - hasHelipad: boolean
    - navigationSystem: String
}

interface YachtBuilder <<Builder>> {
    + setName(): YachtBuilder
    + setLength(): YachtBuilder
    + setBeam(): YachtBuilder
    + setHullMaterial(): YachtBuilder
    + setEngine(): YachtBuilder
    + setCabins(): YachtBuilder
    + setCrew(): YachtBuilder
    + setMaxPassengers(): YachtBuilder
    + setCruisingSpeed(): YachtBuilder
    + addSunDeck(): YachtBuilder
    + addJacuzzi(): YachtBuilder
    + addHelipad(): YachtBuilder
    + setNavigationSystem(): YachtBuilder
    + build(): Yacht
    + reset(): YachtBuilder
}

abstract class AbstractYachtBuilder {
    # {abstract} applyDefaults(): void
    # {abstract} validateCategoryRules(): void
    - validate(): void
    - requireNonBlank(): void
}

class SailingYachtBuilder <<ConcreteBuilder>> {
    # applyDefaults(): void
    # validateCategoryRules(): void
}

class SuperYachtBuilder <<ConcreteBuilder>> {
    # applyDefaults(): void
    # validateCategoryRules(): void
}

class YachtDirector <<Director>> {
    - builder: YachtBuilder
    + buildWeekendCruiser(): Yacht
    + buildOceanRacer(): Yacht
    + buildMediterraneanSuperyacht(): Yacht
    + buildExplorerSuperyacht(): Yacht
}

class Main <<Client>> {
    + {static} main(): void
}

Yacht --> HullMaterial
Yacht --> EngineType
YachtBuilder <|.. AbstractYachtBuilder
AbstractYachtBuilder <|-- SailingYachtBuilder
AbstractYachtBuilder <|-- SuperYachtBuilder
AbstractYachtBuilder ..> Yacht : creates
YachtDirector o--> YachtBuilder : uses
Main ..> SailingYachtBuilder : creates
Main ..> SuperYachtBuilder : creates
Main ..> YachtDirector : creates

@enduml
